添加展示7天预报信息的功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyWeather</string>
+    <string name="seven_days"><u>7天预报</u></string>
+    <string name="three_days"><u>3天预报</u></string>
 </resources>
