--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">MyWeather</string>
-    <string name="seven_days"><u>7天预报</u></string>
-    <string name="three_days"><u>3天预报</u></string>
+    <string name="seven_days">7天预报</string>
+    <string name="three_days">3天预报</string>
 </resources>
